# Tiny-Splatoon

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  Tiny-Splatoon.sln  Tiny-Splatoon.vcxproj  Tiny-Splatoon.vcxproj.filters  main.cpp  vcpkg.json
assets/shaders/: default.frag  default.vert  paint.frag  paint.vert  particle.frag  particle.vert  scoreboard.frag  splat.frag  splat.vert  ui.frag  ui.vert
components/: Camera.h  HUD.h  Health.h  InkProjectile.h  InkShooter.h  MeshRenderer.h  PlayerController.h  Scoreboard.h  SimpleAI.h
engine/: Component.h  GameObject.h  Transform.h
engine/audio/: AudioManager.cpp  AudioManager.h  miniaudio.h
engine/core/: Input.cpp  Input.h  Logger.h  Timer.h  Window.cpp  Window.h
engine/fx/: ParticleSystem.h
engine/rendering/: Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
engine/scene/: Scene.h  SceneManager.cpp  SceneManager.h
gameplay/: Bomb.h  BowWeapon.h  BrushWeapon.h  Enemy.h  GameWorld.h  Item.hpp  LevelGeometry.h  Player.h  Projectile.h  RemotePlayer.h  ShooterWeapon.h  ShotgunWeapon.h  SlosherWeapon.h  Weapon.h
graphics/: InkMap.h  Shader.h
gui/: GUIManager.cpp  GUIManager.h
network/: NetworkManager.cpp  NetworkManager.h  NetworkProtocol.h
scene/: Entity.h  FloorMesh.h  GameScene.cpp  GameScene.h  Level.h  Lobby.h  LobbyScene.h  LoginScene.h
splat/: SplatMap.h  SplatPainter.h  SplatPhysics.h  SplatRenderer.h
